# mojo-lite

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  grammar.md  roadmap.md  rust-toolchain.toml  rustfmt.toml
assets/: README.md
assets/ok/: add.mojo  arithmetic.mojo  associated_trait_self_element.mojo  associated_type_return.mojo  boolable_and_divmod.mojo  builtins_numeric.mojo  chained_comparison.mojo  closures.mojo  comparable_ordered_algorithms.mojo  comptime_ctfe.mojo  comptime_for.mojo  comptime_if.mojo  comptime_if_generic_specialization.mojo  comptime_tuple.mojo  copyinit_moveinit.mojo  decorators.mojo  default_args.mojo  defines_main.mojo  dunder_contains.mojo  (+59 more)
conformance/: cases.tsv  manual-sections.tsv  parity.tsv
docs/: architecture.md  features.md  frontend.md  kwargs_dict_memo.md  mojo-nightly.md  nif.md  symbol-map.md  todo.md  vm-instruction-set.md
scripts/: check  conformance
src/: ast.rs  call.rs  checked.rs  checker.rs  compiler.rs  comptime.rs  ct.rs  error.rs  evaluator.rs  explicit_destroy.rs  lexer.rs  lib.rs  main.rs  module.rs  origin.rs  parser.rs  symbol.rs  token.rs  types.rs
stdlib/: README.md  dict.mojo  hashdict.mojo  hashing.mojo  hashset.mojo  iterable.mojo  list.mojo  math.mojo  optional.mojo  set.mojo
tests/: assets_test.rs  checker_test.rs  compiler_test.rs  comptime_test.rs  drops_test.rs  evaluator_test.rs  hir_test.rs  lexer_test.rs  mir_test.rs  module_test.rs  origin_test.rs  overload_rejection_test.rs  ownership_test.rs  parser_test.rs  self_host_test.rs  symbol_test.rs  verify_test.rs  vm_test.rs
(+160 files in other folders)
